# hhearthstone

./: .ghci  .gitignore  .hlint.yaml  hheartstone.cabal  index.html  readme.md  scratch.html  stack.yaml
app/: r&d.lhs
other/: api.md  header.md  json.md  readme_.md  scratch.md  testGameState.md
other/hsreplay/: example.hsreplay  t1.xml  t2.xml
src/: Hearth.hs  Hearth.lhs
src/Hearth/: Card.hs  Enum.hs  Format.hs  Format.lhs  Game.hs  Json.hs  Json.lhs  Player.hs  Xml.hs
