name: hheartstone
version: 0.0.0.1
synopsis: See readme.md
description: See readme.md for description.
category: project
homepage: https://github.com/tonyday567/hheartstone#readme
bug-reports: https://github.com/tonyday567/hheartstone/issues
author: Tony Day
maintainer: tonyday567@gmail.com
copyright: Tony Day (c) 2017
license: BSD3
license-file: LICENSE
build-type: Simple
cabal-version: >= 1.10
extra-source-files:
  readme.md
  stack.yaml
source-repository head
  type: git
  location: https://github.com/tonyday567/hheartstone
executable hheartstone
  main-is: r&d.lhs
  hs-source-dirs:
    app
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -funbox-strict-fields
    -fforce-recomp
    -threaded
    -rtsopts
    -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hheartstone
    , mwc-random
    , protolude
    , aeson
    , text
    , unordered-containers
    , scientific
    , primitive
    , mtl
  default-language:
    Haskell2010
library
  hs-source-dirs:
    src
  default-extensions:
    NegativeLiterals
    NoImplicitPrelude
    OverloadedStrings
    UnicodeSyntax
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  exposed-modules:
    Hearth
    Hearth.Json
    Hearth.Format
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , formatting
    , mtl
    , mwc-random
    , primitive
    , protolude
    , scientific
    , text
    , unordered-containers
    , vector
  default-language:
    Haskell2010
